kubernetes/apps/default/plex-ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex-ingress
  namespace: default
spec:
  ports:
    - port: 32400
      targetPort: 32400
      protocol: TCP
  externalIPs:
    - 192.168.1.150
  # type: LoadBalancer
  externalTrafficPolicy: Local
---
kind: Endpoints
apiVersion: v1
metadata:
  name: plex-ingress
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.1.150
    ports:
      - port: 32400
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    hajimari.io/enable: "true"
    hajimari.io/group: Media
    nginx.ingress.kubernetes.io/app-root: /web

spec:
  rules:
    - host: plex.${SECRET_DOMAIN}
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: plex-ingress
                port:
                  number: 32400
  tls:
    - hosts:
        - plex.${SECRET_DOMAIN}
      secretName: plex-tls
  ingressClassName: nginx
